plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.4' apply(false)
    id 'io.spring.dependency-management' version '1.1.6'
    id 'com.google.cloud.tools.jib' version '3.4.4'
}

group = 'com.e205'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

allprojects {
    apply plugin: 'java-library'
    apply plugin: 'com.google.cloud.tools.jib'

    group = 'com.e205'
    version = '0.0.1-SNAPSHOT'
    sourceCompatibility = '17'

    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'org.springframework.boot'
    apply plugin: 'io.spring.dependency-management'

    configurations {
        compileOnly {
            extendsFrom annotationProcessor
        }
    }

    dependencies {
        implementation 'org.springframework.boot:spring-boot-starter'
        compileOnly 'org.projectlombok:lombok'
        annotationProcessor 'org.projectlombok:lombok'
        testImplementation 'org.springframework.boot:spring-boot-starter-test'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }

    test {
        useJUnitPlatform()
    }

    tasks.named('bootRun') {
        enabled = false
    }

    project(':module-api') {
        tasks.named('jib') {
            dependsOn(tasks.named('shadowJar'))
        }
        jib {
            container {
                mainClass = 'com.e205.Application'
                appRoot = '/app'
                jvmFlags = ['-Duser.timezone=Asia/Seoul',
                            '-Dspring.profiles.active=prod',
                            '-javaagent:/app/event-agent-0.0.1-SNAPSHOT-all.jar']
            }

            extraDirectories {
                paths {
                    path {
                        from = file('build/libs') // 이미 만들어진 jar 파일 경로
                        into = '/app' // 이미지 내 복사 위치
                    }
                }
            }
        }
    }
}